Menu z nic nie robiącym buttonem.

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -8,6 +8,9 @@ and open the template in the editor.
         <title>Dungeon Brawl</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="css.css" type="text/css"/>
+     <!---   <script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script> -->
+        <script src="easel.js"></script>
+        <script src="menu.js"></script>
     </head>
     <body>
         <div id="game">
