Menu z nic nie robiącym buttonem.

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -13,9 +13,12 @@ and open the template in the editor.
         <script src="menu.js"></script>
     </head>
     <body>
-        <div id="game">
+        <div id="game" hidden>
             <canvas id="canvasGUI"></canvas>
             <canvas id="canvasPlayer"></canvas>
+        </div>
+        <div id="menu">
+            <button>Rozpocznij grę</button>
         </div>
     </body>
 </html>
