Nowa czcionka i brzydki efekt po najechaniu myszką na przycisk :D

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             <canvas id="canvasPlayer"></canvas>
         </div>
         <div id="menu">
-            <button>Rozpocznij grę</button>
+            <button>START</button>
         </div>
     </body>
 </html>
