--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -13,12 +13,12 @@ and open the template in the editor.
         <script src="menu.js"></script>
     </head>
     <body>
-        <div id="game" hidden>
+        <div id="dGame" hidden>
             <canvas id="canvasGUI"></canvas>
             <canvas id="canvasPlayer"></canvas>
         </div>
-        <div id="menu">
-            <button>START</button>
+        <div id="dMenu">
+            <button id="bStart">START</button>
         </div>
     </body>
 </html>
