Canvas na mapę + dodany plik z mapą

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -7,11 +7,13 @@
      <!---   <script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script> -->
         <script src="easel.js"></script>
         <script src="menu.js"></script>
+		<script src="maps/basic.json"></script>
     </head>
     <body>
         <div id="dGame" hidden>
             <canvas id="canvasGUI"></canvas>
             <canvas id="canvasPlayer"></canvas>
+			<canvas id="canvasMap"><canvas> 
         </div>
         <div id="dMenu">
             <button id="bStart">START</button>
