Saving Bitmaps instead of URL:data and saving only those Bitmaps that are actually used.

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -12,10 +12,9 @@
     </head>
     <body>
         <div id="dGame" hidden>
-            <canvas id="canvasMap"></canvas>
+            <canvas id="canvasMapBase"></canvas>
             <canvas id="canvasPlayer"></canvas>
             <canvas id="canvasGUI"></canvas>
-			<canvas id="canvasMap"><canvas> 
         </div>
         <div id="dMenu">
             <button id="bStart">START</button>
