--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -4,8 +4,7 @@
         <title>Dungeon Brawl</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="css.css" type="text/css"/>
-     <!---   <script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script> -->
-        <script src="js/easel.js"></script>
+        <script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script>
         <script src="js/menu.js"></script>
         <script src="js/System.js"></script>
         <script src="maps/basic.json"></script>
