Fully loads the map, removed canvasGUI (will do html GUI), added canvasMapFront.

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -13,7 +13,7 @@
         <div id="dGame" hidden>
             <canvas id="canvasMapBase"></canvas>
             <canvas id="canvasPlayer"></canvas>
-            <canvas id="canvasGUI"></canvas>
+            <canvas id="canvasMapFront"></canvas>
         </div>
         <div id="dMenu">
             <button id="bStart">START</button>
