FPS are shown, GameMap.map objects have action property ("walk", "fall to death", "item", etc.), added GameMap._showLevels() function.

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -20,5 +20,7 @@
         <div id="dMapChoose" hidden>
             <button id="bMap1">Mountain Top</button>
         </div>
+        <p id="pFPS"></p>
     </body>
 </html>
+
