--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -7,6 +7,7 @@
         <script src="http://code.createjs.com/easeljs-0.4.2.min.js"></script>
         <script src="js/menu.js"></script>
         <script src="js/System.js"></script>
+        <script src="js/Painter.js"></script>
     </head>
     <body>
         <div id="dGame" hidden>
