After clicking the map and moving the mouse it now moves!

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -14,6 +14,7 @@
             <canvas id="canvasMapBase"></canvas>
             <canvas id="canvasPlayer"></canvas>
             <canvas id="canvasMapFront"></canvas>
+            <canvas id="canvasBackground"></canvas>
         </div>
         <div id="dMenu">
             <button id="bStart">START</button>
