Removed the map physic, work for later, added .marker to every map object with action walk, default alpha is 0 so it's not visible, added canvas for markers.

--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -12,6 +12,7 @@
     <body>
         <div id="dGame" hidden>
             <canvas id="canvasMapBase"></canvas>
+            <canvas id="canvasMarker"></canvas>
             <canvas id="canvasPlayer"></canvas>
             <canvas id="canvasMapFront"></canvas>
             <canvas id="canvasBackground"></canvas>
