--- a/Brawl/src/index.html
+++ b/Brawl/src/index.html
@@ -8,6 +8,7 @@
         <script src="js/menu.js"></script>
         <script src="js/System.js"></script>
         <script src="js/Painter.js"></script>
+        <script src="js/Controller.js"></script>
     </head>
     <body>
         <div id="dGame" hidden>
